crates/aven-check/tests/fixtures/check/valid/comptime-bindings-no-eval.av
User = { name: Text }
UserAlias = User
HttpOk = 200
Colors = @{@Red, @Green}
