crates/aven-check/tests/fixtures/check/invalid/runtime-binding-holds-type.av
User = { name: Text }
config = User
userType = User
